@@ -2,6 +2,12 @@
 #define _LIBHX_DEQUE_H 1
 
 #ifdef __cplusplus
+#	include <cstdlib>
+#else
+#	include <stdlib.h>
+#endif
+
+#ifdef __cplusplus
 extern "C" {
 #endif
 
@@ -32,8 +38,13 @@ extern struct HXdeque_node *HXdeque_find(struct HXdeque *, const void *);
 extern void *HXdeque_get(struct HXdeque *, const void *);
 extern void *HXdeque_del(struct HXdeque_node *);
 extern void HXdeque_free(struct HXdeque *);
-extern void HXdeque_genocide(struct HXdeque *);
+extern void HXdeque_genocide2(struct HXdeque *, void (*)(void *));
 extern void **HXdeque_to_vec(const struct HXdeque *, unsigned int *);
+
+static inline void HXdeque_genocide(struct HXdeque *dq)
+{
+	HXdeque_genocide2(dq, free);
+}
 
 #ifdef __cplusplus
 } /* extern "C" */
